--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
@@ -135,7 +135,7 @@
 				  <input type="text" class="form-control" name="titol" required="required">
 				</div>
 		        <div class="space10"></div>
-		        <label">Contingut</label>
+		        <label>Contingut</label>
 		       	<div class="form-group">
 				  <input type="text" class="form-control" rows="3" name="contingut" required="required" >
 				</div>
