--- a/src/ADG/PrincipalBundle/Resources/views/AdminFons/nou.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminFons/nou.html.twig
@@ -163,13 +163,13 @@
 				 	
 				 {% elseif tipus is sameas("liberden") %}	
 				 	<div class="input-group">
-						<span class="input-group-addon">Data</span>
-						<input type="text" class="form-control" name="inputData" >
+						<span class="input-group-addon">Institució</span>
+						<input type="text" class="form-control" name="inputInstitucio" >
 					</div><div class="space10"></div>
 
 				 	<div class="input-group">
-						<span class="input-group-addon">Cognom, Nom</span>
-						<input type="text" class="form-control" name="inputNom" >
+						<span class="input-group-addon">Foli</span>
+						<input type="text" class="form-control" name="inputFoli" >
 					</div><div class="space10"></div>
 				 	
 				 {% elseif tipus is sameas("testaments") %}	
