Finished ArxiuFons nou

--- a/src/ADG/ArxiuBundle/Resources/views/Fons/detall.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/detall.html.twig
@@ -30,7 +30,7 @@
 			 {% elseif tipus is sameas("monges") %}	
 			 	{% if info.data is not null and info.data is not empty %}<h5 style="color: #3a87ad">Data</h5><p>{{ info.data }}</p>{% endif %}
 			 	{% if info.cognom is not null and info.cognom is not empty %}<h5 style="color: #3a87ad">Cognom, Nom</h5><p>{{ info.cognom }}</p>{% endif %}
-			 	{% if info.natural is not null and info.natural is not empty %}<h5 style="color: #3a87ad">Natural</h5><p>{{ info.natural }}</p>{% endif %}
+			 	{% if info.naturalDe is not null and info.naturalDe is not empty %}<h5 style="color: #3a87ad">Natural</h5><p>{{ info.naturalDe }}</p>{% endif %}
 			 	{% if info.congregacio is not null and info.congregacio is not empty %}<h5 style="color: #3a87ad">Congregació</h5><p>{{ info.congregacio }}</p>{% endif %}
 			 	{% if info.llocCongregacio is not null and info.llocCongregacio is not empty %}<h5 style="color: #3a87ad">Lloc de congregació</h5><p>{{ info.llocCongregacio }}</p>{% endif %}
 			 	{% if info.fitxa is not null and info.fitxa is not empty %}<h5 style="color: #3a87ad">Fitxa</h5><p>{{ info.fitxa }}</p>{% endif %}
@@ -38,7 +38,7 @@
 			 {% elseif tipus is sameas("capellans") %}
 			 	{% if info.dataNaixement is not null and info.dataNaixement is not empty %}<h5 style="color: #3a87ad">Data de naixement</h5><p>{{ info.dataNaixement }}</p>{% endif %}
 			 	{% if info.cognom is not null and info.cognom is not empty %}<h5 style="color: #3a87ad">Cognom, Nom</h5><p>{{ info.cognom }}</p>{% endif %}
-			 	{% if info.natural is not null and info.natural is not empty %}<h5 style="color: #3a87ad">Natural</h5><p>{{ info.natural }}</p>{% endif %}
+			 	{% if info.naturalDe is not null and info.naturalDe is not empty %}<h5 style="color: #3a87ad">Natural</h5><p>{{ info.naturalDe }}</p>{% endif %}
 			 	{% if info.ordenacio is not null and info.ordenacio is not empty %}<h5 style="color: #3a87ad">Ordenació</h5><p>{{ info.ordenacio }}</p>{% endif %}
 			 	{% if info.dataObit is not null and info.dataObit is not empty %}<h5 style="color: #3a87ad">Data óbit</h5><p>{{ info.dataObit }}</p>{% endif %}
 			 	{% if info.fitxa is not null and info.fitxa is not empty %}<h5 style="color: #3a87ad">Fitxa</h5><p>{{ info.fitxa }}</p>{% endif %}	
