--- a/src/ADG/PrincipalBundle/Resources/views/AdminFons/editar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminFons/editar.html.twig
@@ -2,15 +2,167 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" style="color: #3a87ad">Informació completa</h4>
+          <h4 class="modal-title">Editar informació</h4>
         </div>
-      	<div class="modal-body">
-      	
-      		
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-        </div>
+      <form action="{{ path("fons_editar_confirmar", { 'seleccio': seleccio }) }}" method="post">
+	      	<div class="modal-body"> 
+	      		
+	      		<p>Es pot modificar següent informació:</p>
+	      		
+	      		{% if tipus is sameas("liberden") %}<input type="hidden" name="id" value="{{ info.id }}">
+	      		{% else %} <input type="hidden" name="id" value="{{ info.num }}">
+	      		{% endif %}
+	      		<div class="space10"></div>
+		      	<div class="input-group">
+					<span class="input-group-addon">Classificació de l'arxiu</span>
+					<input type="text" class="form-control" value="{{ info.nodac }}" pattern="^([a-zA-Z0-9]*\.)*$" name="inputNodac" >
+				</div><div class="space10"></div>
+				 		
+	      		 {% if tipus is sameas("arxius") or tipus is sameas("mitra") %}
+	      		 
+	      		 	<div class="input-group">
+						<span class="input-group-addon">Data</span>
+						<input type="text" class="form-control" value="{{ info.data }}" name="inputData" >
+					</div><div class="space10"></div>
 
+				 	<div class="input-group">
+						<span class="input-group-addon">Dades</span>
+						<textarea type="text" class="form-control"  rows="2" name="inputDades" >{{ info.dades }}</textarea>
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Notari</span>
+						<input type="text" class="form-control" value="{{ info.notari }}" name="inputNotari" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Mides</span>
+						<input type="text" class="form-control" value="{{ info.mides }}" name="inputMides" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Observacions</span>
+						<input type="text" class="form-control" value="{{ info.obs }}" name="inputObs" >
+					</div><div class="space10"></div>
+				 	
+				 {% elseif tipus is sameas("fons") %}
+				 	<div class="input-group">
+						<span class="input-group-addon">Dades</span>
+						<textarea type="text" class="form-control"  rows="2" name="inputDades" >{{ info.dades }}</textarea>
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Llibre</span>
+						<input type="text" class="form-control" value="{{ info.llibre }}" name="inputLlibre" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Full</span>
+						<input type="text" class="form-control" value="{{ info.full }}" name="inputFull" >
+					</div><div class="space10"></div>
+				 	
+				 {% elseif tipus is sameas("monges") %}	
+				 	<div class="input-group">
+						<span class="input-group-addon">Data</span>
+						<input type="text" class="form-control" value="{{ info.data }}" name="inputData" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Cognom, Nom</span>
+						<input type="text" class="form-control" value="{{ info.cognom }}" name="inputNom" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Natural</span>
+						<input type="text" class="form-control" value="{{ info.naturalDe }}" name="inputNatural" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Congregació</span>
+						<input type="text" class="form-control" value="{{ info.congregacio }}" name="inputCongregacio" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Lloc de congregació</span>
+						<input type="text" class="form-control" value="{{ info.llocCongregacio }}" name="inputLloc" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Fitxa</span>
+						<input type="text" class="form-control" value="{{ info.fitxa }}" name="inputFitxa" >
+					</div><div class="space10"></div>
+				
+				 {% elseif tipus is sameas("capellans") %}
+				 	<div class="input-group">
+						<span class="input-group-addon">Data de naixement</span>
+						<input type="text" class="form-control" value="{{ info.dataNaixement }}" name="inputData" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Cognom, Nom</span>
+						<input type="text" class="form-control" value="{{ info.cognom }}" name="inputNom" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Natural</span>
+						<input type="text" class="form-control" value="{{ info.naturalDe }}" name="inputNatural" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Ordenació</span>
+						<input type="text" class="form-control" value="{{ info.ordenacio }}" name="inputOrdenacio" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Data óbit</span>
+						<input type="text" class="form-control" value="{{ info.dataObit }}"  name="inputDataObit" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Fitxa</span>
+						<input type="text" class="form-control" value="{{ info.fitxa }}" name="inputFitxa" >
+					</div><div class="space10"></div>
+	
+				 	<div class="input-group">
+						<span class="input-group-addon">Altres</span>
+						<input type="text" class="form-control" value="{{ info.altres }}" name="inputAltres" >
+					</div><div class="space10"></div>
+				 
+				 {% elseif tipus is sameas("seminaristes") %}
+				 	<div class="input-group">
+						<span class="input-group-addon">Data</span>
+						<input type="text" class="form-control" value="{{ info.data }}" name="inputData" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Cognom, Nom</span>
+						<input type="text" class="form-control" value="{{ info.cognom }}" name="inputNom" >
+					</div><div class="space10"></div>
+				 	
+				 {% elseif tipus is sameas("liberden") %}	
+				 	<div class="input-group">
+						<span class="input-group-addon">Institució</span>
+						<input type="text" class="form-control" value="{{ info.institucio }}" name="inputInstitucio" >
+					</div><div class="space10"></div>
+
+				 	<div class="input-group">
+						<span class="input-group-addon">Foli</span>
+						<input type="text" class="form-control" value="{{ info.foli }}" name="inputFoli" >
+					</div><div class="space10"></div>
+				 	
+				 {% elseif tipus is sameas("testaments") %}	
+					<div class="input-group">
+						<span class="input-group-addon">Dades</span>
+						<textarea type="text" class="form-control"  rows="2" name="inputDades" >{{ info.dades }}</textarea>
+					</div><div class="space10"></div>
+	      		
+	      		{% endif %}
+	        </div>
+	        
+	        <div class="modal-footer">
+	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
+	          <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Editar</button>
+	        </div>
+		</form><!-- /.form -->
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
