--- a/src/ADG/PrincipalBundle/Resources/views/AdminFons/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminFons/eliminar.html.twig
@@ -2,15 +2,72 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" style="color: #3a87ad">Informació completa</h4>
+          <h4 class="modal-title text-danger">Eliminar</h4>
         </div>
-      	<div class="modal-body">
-      	
-      		
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-        </div>
-
+      <form action="{{ path("fons_eliminar_confirmar", { 'seleccio': seleccio }) }}" method="post">
+	      	<div class="modal-body"> 
+	      		
+	      		<strong class="text-danger">S'eliminarà l'entrada amb la següent informació:</strong>
+	      		
+	      		{% if tipus is sameas("liberden") %}<input type="hidden" name="id" value="{{ info.id }}">
+	      		{% else %} <input type="hidden" name="id" value="{{ info.num }}">
+	      		{% endif %}
+	      		
+				 {% if info.nodac is not null and info.nodac is not empty %}<h5 style="color: #d9534f">Classificació de l'arxiu</h5><p>{{ info.nodac }}</p>{% endif %}
+			 		
+	      		 {% if tipus is sameas("arxius") %}
+	      		 	{% if info.data is not null and info.data is not empty %}<h5 style="color: #d9534f">Data</h5><p>{{ info.data }}</p>{% endif %}
+				 	{% if info.dades is not null and info.dades is not empty %}<h5 style="color: #d9534f">Dades</h5><p>{{ info.dades }}</p>{% endif %}
+				 	{% if info.notari is not null and info.notari is not empty %}<h5 style="color: #d9534f">Notari</h5><p>{{ info.notari }}</p>{% endif %}
+				 	{% if info.mides is not null and info.mides is not empty %}<h5 style="color: #d9534f">Mides</h5><p>{{ info.mides }}</p>{% endif %}
+				 	{% if info.obs is not null and info.obs is not empty %}<h5 style="color: #d9534f">Observacions</h5><p>{{ info.obs }}</p>{% endif %}
+				 	
+				 {% elseif tipus is sameas("fons") %}
+				 	{% if info.dades is not null and info.dades is not empty %}<h5 style="color: #d9534f">Dades</h5><p>{{ info.dades }}</p>{% endif %}
+				 	{% if info.llibre is not null and info.llibre is not empty %}<h5 style="color: #d9534f">Llibre</h5><p>{{ info.llibre }}</p>{% endif %}
+				 	{% if info.full is not null and info.full is not empty %}<h5 style="color: #d9534f">Full</h5><p>{{ info.full }}</p>{% endif %}
+				 	
+				 {% elseif tipus is sameas("mitra") %}
+				 	{% if info.data is not null and info.data is not empty %}<h5 style="color: #d9534f">Data</h5><p>{{ info.data }}</p>{% endif %}
+				 	{% if info.dades is not null and info.dades is not empty %}<h5 style="color: #d9534f">Dades</h5><p>{{ info.dades }}</p>{% endif %}
+				 	{% if info.notari is not null and info.notari is not empty %}<h5 style="color: #d9534f">Notari</h5><p>{{ info.notari }}</p>{% endif %}
+				 	{% if info.mides is not null and info.mides is not empty %}<h5 style="color: #d9534f">Mides</h5><p>{{ info.mides }}</p>{% endif %}
+				 	{% if info.obs is not null and info.obs is not empty %}<h5 style="color: #d9534f">Observacions</h5><p>{{ info.obs }}</p>{% endif %}
+				 	
+				 {% elseif tipus is sameas("monges") %}	
+				 	{% if info.data is not null and info.data is not empty %}<h5 style="color: #d9534f">Data</h5><p>{{ info.data }}</p>{% endif %}
+				 	{% if info.cognom is not null and info.cognom is not empty %}<h5 style="color: #d9534f">Cognom, Nom</h5><p>{{ info.cognom }}</p>{% endif %}
+				 	{% if info.naturalDe is not null and info.naturalDe is not empty %}<h5 style="color: #d9534f">Natural</h5><p>{{ info.naturalDe }}</p>{% endif %}
+				 	{% if info.congregacio is not null and info.congregacio is not empty %}<h5 style="color: #d9534f">Congregació</h5><p>{{ info.congregacio }}</p>{% endif %}
+				 	{% if info.llocCongregacio is not null and info.llocCongregacio is not empty %}<h5 style="color: #d9534f">Lloc de congregació</h5><p>{{ info.llocCongregacio }}</p>{% endif %}
+				 	{% if info.fitxa is not null and info.fitxa is not empty %}<h5 style="color: #d9534f">Fitxa</h5><p>{{ info.fitxa }}</p>{% endif %}
+				
+				 {% elseif tipus is sameas("capellans") %}
+				 	{% if info.dataNaixement is not null and info.dataNaixement is not empty %}<h5 style="color: #d9534f">Data de naixement</h5><p>{{ info.dataNaixement }}</p>{% endif %}
+				 	{% if info.cognom is not null and info.cognom is not empty %}<h5 style="color: #d9534f">Cognom, Nom</h5><p>{{ info.cognom }}</p>{% endif %}
+				 	{% if info.naturalDe is not null and info.naturalDe is not empty %}<h5 style="color: #d9534f">Natural</h5><p>{{ info.naturalDe }}</p>{% endif %}
+				 	{% if info.ordenacio is not null and info.ordenacio is not empty %}<h5 style="color: #d9534f">Ordenació</h5><p>{{ info.ordenacio }}</p>{% endif %}
+				 	{% if info.dataObit is not null and info.dataObit is not empty %}<h5 style="color: #d9534f">Data óbit</h5><p>{{ info.dataObit }}</p>{% endif %}
+				 	{% if info.fitxa is not null and info.fitxa is not empty %}<h5 style="color: #d9534f">Fitxa</h5><p>{{ info.fitxa }}</p>{% endif %}	
+				 	{% if info.altres is not null and info.altres is not empty %}<h5 style="color: #d9534f">Altres</h5><p>{{ info.altres }}</p>{% endif %}
+				 
+				 {% elseif tipus is sameas("seminaristes") %}
+				 	{% if info.data is not null and info.data is not empty %}<h5 style="color: #d9534f">Data</h5><p>{{ info.data }}</p>{% endif %}
+				 	{% if info.cognom is not null and info.cognom is not empty %}<h5 style="color: #d9534f">Cognom, Nom</h5><p>{{ info.cognom }}</p>{% endif %}	
+				 	
+				 {% elseif tipus is sameas("liberden") %}	
+				 	{% if info.institucio is not null and info.institucio is not empty %}<h5 style="color: #d9534f">Institucio</h5><p>{{ info.institucio }}</p>{% endif %}
+				 	{% if info.foli is not null and info.foli is not empty %}<h5 style="color: #d9534f">Foli</h5><p>{{ info.foli }}</p>{% endif %}
+				 	
+				 {% elseif tipus is sameas("testaments") %}	
+					{% if info.dades is not null and info.dades is not empty %}<h5 style="color: #d9534f">Dades</h5><p>{{ info.dades }}</p>{% endif %}
+				 
+				 {% endif %}	
+	        </div>
+	        <div class="modal-footer">
+	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
+	          <button class="btn btn-danger" type="submit"><i class="icon-remove"></i>&nbsp;Eliminar</button>
+	        </div>
+		</form><!-- /.form -->
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
