--- a/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/BibliotecaBundle/Resources/views/Default/index.html.twig
@@ -1,10 +1,10 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Arxiu capitular{% endblock %}
+{% block title %}Biblioteca{% endblock %}
 
 {% block body %}
 	<div class="page-header">
-        <h1>Arxiu capitular</h1>
+        <h1>Biblioteca</h1>
 	</div>
 	<div class="row">
 		<div class="col-md-7 col-lg-7">
