Improved menu's visual layout

--- a/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
@@ -49,60 +49,60 @@
     	<div class="list-group">
 			{% for f in allFons %}
 				{% if currentId starts with f.nivell %}
-					<a href="{{ path('search', { 'id': f.nivell }) }}" class="list-group-item {% if currentId is sameas(f.nivell) %}active{% endif %}">
+					<a href="{{ path('search', { 'id': f.nivell }) }}" style="max-width:400px;" class="list-group-item {% if currentId is sameas(f.nivell) %}active{% endif %}">
 						<i class="icon-folder-open"></i>
 						{{ f.nivell }} {{ f.titol }}
 					</a>
 					
 					<!-- Subfons --> 
-					<div class="list-group" style="margin-left: 15px; margin-bottom: -1px;">
+					<div class="list-group" style="margin-left: 20px; margin-bottom: -1px;">
 						{% for sf in subFons %}
 							{% if currentId starts with sf.nivell %}
-								<a href="{{ path('search',{ 'id': sf.nivell }) }}" class="list-group-item {% if currentId is sameas(sf.nivell) %}active{% endif %}">
+								<a href="{{ path('search',{ 'id': sf.nivell }) }}" style="max-width:400px;" class="list-group-item {% if currentId is sameas(sf.nivell) %}active{% endif %}">
 									<i class="icon-folder-open"></i>
 									{{ sf.nivell }} {{ sf.titol }}
 								</a>
 								
 								<!-- Grup --> 
-								<div class="list-group" style="margin-left: 15px; margin-bottom: -1px;">
+								<div class="list-group" style="margin-left: 20px; margin-bottom: -1px;">
 									{% for g in grups %}
 										{% if currentId starts with g.nivell %}
-											<a href="{{ path('search',{ 'id': g.nivell }) }}" class="list-group-item {% if currentId is sameas(g.nivell) %}active{% endif %}">
+											<a href="{{ path('search',{ 'id': g.nivell }) }}" style="max-width:400px;" class="list-group-item {% if currentId is sameas(g.nivell) %}active{% endif %}">
 												<i class="icon-folder-open"></i>
 												{{ g.nivell }} {{ g.titol }}
 											</a>
 											
 											<!-- Serie --> 
-											<div class="list-group" style="margin-left: 15px; margin-bottom: -1px;">
+											<div class="list-group" style="margin-left: 20px; margin-bottom: -1px;">
 												{% for se in series %}
 													{% if currentId starts with se.nivell %}
-														<a href="{{ path('search',{ 'id': se.nivell }) }}" class="list-group-item {% if currentId is sameas(se.nivell) %}active{% endif %}">
+														<a href="{{ path('search',{ 'id': se.nivell }) }}" style="max-width:400px;" class="list-group-item {% if currentId is sameas(se.nivell) %}active{% endif %}">
 															<i class="icon-folder-open"></i>
 															{{ se.nivell }} {{ se.titol }}
 														</a>
 														
 														<!-- Ucomposta --> 
-														<div class="list-group" style="margin-left: 15px; margin-bottom: -1px;">
+														<div class="list-group" style="margin-left: 20px; margin-bottom: -1px;">
 															{% for uc in ucomps %}
 																{% if currentId starts with uc.nivell %}
-																	<a href="{{ path('search',{ 'id': uc.nivell }) }}" class="list-group-item {% if currentId is sameas(uc.nivell) %}active{% endif %}">
+																	<a href="{{ path('search',{ 'id': uc.nivell }) }}" style="max-width:400px;" class="list-group-item {% if currentId is sameas(uc.nivell) %}active{% endif %}">
 																		<i class="icon-folder-open"></i>
 																		{{ uc.nivell }} {{ uc.titol }}
 																	</a>
 																	
 																	<!-- Usimple --> 
-																	<div class="list-group" style="margin-left: 15px; margin-bottom: -1px;">
+																	<div class="list-group" style="margin-left: 20px; margin-bottom: -1px;">
 																		{% for us in usims %}
 																			{% if currentId starts with us.nivell %}
-																				<a href="{{ path('search',{ 'id': us.nivell }) }}" class="list-group-item {% if currentId is sameas(us.nivell) %}active{% endif %}">
+																				<a href="{{ path('search',{ 'id': us.nivell }) }}" style="max-width:400px;" class="list-group-item {% if currentId is sameas(us.nivell) %}active{% endif %}">
 																					<i class="icon-folder-open"></i>
 																					{{ us.nivell }} {{ us.titol }}
 																				</a>
 																				
 																				<!-- Uinstalacio --> 
-																				<div class="list-group" style="margin-left: 15px; margin-bottom: -1px;">
+																				<div class="list-group" style="margin-left: 20px; margin-bottom: -1px;">
 																					{% for ui in uinsts %}
-																						<a href="{{ path('search',{ 'id': ui.nivell }) }}" class="list-group-item {% if currentId is sameas(ui.nivell) %}active{% endif %}">
+																						<a href="{{ path('search',{ 'id': ui.nivell }) }}" style="max-width:400px;" class="list-group-item {% if currentId is sameas(ui.nivell) %}active{% endif %}">
 																							<i class="icon-file-text"></i>
 																							{{ ui.nivell }} {{ ui.titol }}
 																						</a>
@@ -112,7 +112,7 @@
 																				</div><!-- /.Uinstalacio --> 
 																				
 																			{% else %}
-																				<a href="{{ path('search', { 'id': us.nivell }) }}" class="list-group-item ">
+																				<a href="{{ path('search', { 'id': us.nivell }) }}" style="max-width:400px;" class="list-group-item ">
 																					<i class="icon-folder-close"></i>
 																					{{ us.nivell }} {{ us.titol }}
 																				</a>
@@ -123,7 +123,7 @@
 																	</div><!-- /.Usimple --> 
 																	
 																{% else %}
-																	<a href="{{ path('search', { 'id': uc.nivell }) }}" class="list-group-item ">
+																	<a href="{{ path('search', { 'id': uc.nivell }) }}" style="max-width:400px;" class="list-group-item ">
 																		<i class="icon-folder-close"></i>
 																		{{ uc.nivell }} {{ uc.titol }}
 																	</a>
@@ -134,7 +134,7 @@
 														</div><!-- /.Ucomposta --> 
 														
 													{% else %}
-														<a href="{{ path('search', { 'id': se.nivell }) }}" class="list-group-item ">
+														<a href="{{ path('search', { 'id': se.nivell }) }}" style="max-width:400px;" class="list-group-item ">
 															<i class="icon-folder-close"></i>
 															{{ se.nivell }} {{ se.titol }}
 														</a>
@@ -145,7 +145,7 @@
 											</div><!-- /.Serie --> 
 											
 										{% else %}
-											<a href="{{ path('search', { 'id': g.nivell }) }}" class="list-group-item ">
+											<a href="{{ path('search', { 'id': g.nivell }) }}" style="max-width:400px;" class="list-group-item ">
 												<i class="icon-folder-close"></i>
 												{{ g.nivell }} {{ g.titol }}
 											</a>
@@ -156,7 +156,7 @@
 								</div><!-- /.Grup --> 
 								
 							{% else %}
-								<a href="{{ path('search', { 'id': sf.nivell }) }}" class="list-group-item">
+								<a href="{{ path('search', { 'id': sf.nivell }) }}" style="max-width:400px;" class="list-group-item">
 									<i class="icon-folder-close"></i>
 									{{ sf.nivell }} {{ sf.titol }}
 								</a>
@@ -167,7 +167,7 @@
 					</div><!-- /.subFons --> 
 					
 				{% else %}
-					<a href="{{ path('search', { 'id': f.nivell }) }}" class="list-group-item">
+					<a href="{{ path('search', { 'id': f.nivell }) }}" style="max-width:400px;" class="list-group-item">
 						<i class="icon-folder-close"></i>
 						{{ f.nivell }} {{ f.titol }}
 					</a>
