--- a/src/ADG/PrincipalBundle/Resources/views/AdminGuia/editar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminGuia/editar.html.twig
@@ -24,3 +24,7 @@
 				value="{{ info.nivell | slice(len-2, len) }}" name="suffix" required>
 		</div><div class="space10"></div>
 {% endblock %}
+
+{% block arxiuButton %}
+    <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Editar</button>
+{% endblock %}	
