--- a/src/ADG/PrincipalBundle/Resources/views/AdminGuia/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminGuia/eliminar.html.twig
@@ -59,6 +59,6 @@
 		    
 {% endblock %}
 
-	          {% block arxiuEliminar %}
+	          {% block arxiuButton %}
 	          <button class="btn btn-danger" type="submit"><i class="icon-remove"></i>&nbsp;Eliminar</button>
 	          {% endblock %}	
