--- a/src/ADG/PrincipalBundle/Resources/views/AdminFons/nou.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminFons/nou.html.twig
@@ -157,7 +157,7 @@
 	        
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-	          <button class="btn btn-success" type="submit"><i class="icon-plus"></i>&nbsp;Nou</button>
+	          <button class="btn btn-success" type="submit"><i class="icon-plus"></i>&nbsp;Afegir</button>
 	        </div>
 		</form><!-- /.form -->
       </div><!-- /.modal-content -->
