--- a/src/ADG/PrincipalBundle/Resources/views/AdminGuia/baseModal.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminGuia/baseModal.html.twig
@@ -185,8 +185,8 @@
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
 	          
-	          {% block arxiuEliminar %}
-	          <button class="btn btn-success" type="submit">Guardar</button>
+	          {% block arxiuButton %}
+	          <button class="btn btn-success" type="submit"><i class="icon-plus"></i>&nbsp;Afegir</button>
 	          {% endblock %}			
 	        </div>
 		</form><!-- /.form -->
