--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/editarNoticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/editarNoticies.html.twig
@@ -18,7 +18,7 @@
 	        </div>
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-	          <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Actualitzar</button>
+	          <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Editar</button>
 	        </div>
 		</form><!-- /.form -->
 
