--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
@@ -142,7 +142,7 @@
 	        </div>
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-	          <button class="btn btn-success" type="submit">Guardar</button>
+	          <button class="btn btn-success" type="submit"><i class="icon-plus"></i>&nbsp;Afegir</button>
 	        </div>
 		</form><!-- /.form -->
 
