--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/crear.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/crear.html.twig
@@ -22,7 +22,7 @@
 	        </div>
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-	          <button class="btn btn-success" type="submit"><i class="icon-plus"></i>&nbsp;Crear</button>
+	          <button class="btn btn-success" type="submit"><i class="icon-plus"></i>&nbsp;Afegir</button>
 	        </div>
 		</form><!-- /.form -->
 
