Added role administration for users

--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/editar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/editar.html.twig
@@ -22,6 +22,12 @@
 		       	<div class="form-group">
 				  <input type="password" class="form-control" name="confirmar" placeholder="*****">
 				</div>
+				<label>Permis*</label>
+				<select class="form-control" name="permis" style="max-width: 100px">
+					<option value = ""> </option>
+		            <option value = "usuari">Usuari</option>
+		        	<option value = "gestor">Gestor</option>
+		        </select>
 				<p class="text-muted text-right" style="font-size:11px;margin-top:-10px;">* si el camp es deixa buit, no es modificarà</p>
 				
 	        </div>
