--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/crear.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/crear.html.twig
@@ -19,6 +19,11 @@
 		       	<div class="form-group">
 				  <input type="text" class="form-control" name="contrasenya" placeholder="*****" required>
 				</div>
+				<label>Permis</label>
+				<select class="form-control" name="permis" style="max-width: 100px">
+		            <option value = "usuari">Usuari</option>
+		        	<option value = "gestor">Gestor</option>
+		        </select>
 	        </div>
 	        <div class="modal-footer">
 	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
