--- a/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminUsuaris/eliminar.html.twig
@@ -12,6 +12,12 @@
 		      	
 		      	<p><strong>Usuari:</strong> {{ usuari.username }}</p>
 		      	<p><strong>Email:</strong> {{ usuari.email }}</p>
+		      	
+                {% set permis = '' %} 
+                {% for rol in usuari.roles if rol is sameas("ROLE_ADMIN") %} {% set permis = 'Gestor' %} 
+                {% else %} {% set permis = 'Usuari' %} 
+                {% endfor  %}
+				<p><strong>Permis:</strong> {{ permis }}</p>
 		        
 	        </div>
 	        <div class="modal-footer">
