Added info about this website

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,6 +38,7 @@
 		    <div class="wrapper">
 		      <div class="container proper-content">
 		        {% block body %}{% endblock %}
+		        <div class="space10"></div>
 		      </div><!-- /.proper-content -->
 		      <div class="push"></div>
 		    </div><!-- /.wrapper -->
