--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}{% endblock %} | Arxiu diocesà de Girona</title>
+        <title>{% block title %}{% endblock %} | {{ 'base.title' | trans }}</title>
           
         <link href="{{ asset('bundles/adg/css/font-awesome.css') }}" rel="stylesheet">
         <link href="{{ asset('bundles/adg/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -20,7 +20,7 @@
     
 	     <div class="navbar navbar-inverse navbar-fixed-top " role="navigation">	
 			    <div class="navbar-header">
-				    <a class="navbar-brand" href="{{ path('index') }}"">Arxiu diocesà de Girona</a>
+				    <a class="navbar-brand" href="{{ path('index') }}"">{{ 'base.title' | trans }}</a>
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				      <span class="sr-only">Toggle navigation</span>
 				      <span class="icon-bar"></span>
